feat(vector): 优化向量存储实现并添加批量处理和重试机制
- 添加 BatchUtil 工具类用于批量处理操作
- 引入可配置的批量大小、重试次数和延迟参数
- 实现带重试机制的批处理功能，提高数据处理稳定性
- 添加实体验证过滤，确保只处理有效数据
- 修复条件注解属性名称从 knowledge.store.vector.backend 到 knowledge.vector.type
- 统一向量存储配置参数，默认批量大小从 100 调整为 10
- 优化日志记录，添加调试和警告信息
- 清理冗余代码，移除未使用的导入和变量
- 修复 JSONB 列定义，确保元数据存储正确性